Created "Benefits" section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>YouCan! | English Course</title>
 	<!-- <link rel="stylesheet" href="css/reset.css"> -->
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
@@ -15,11 +17,11 @@
 <body>
 	<header class="mainHeader">
 		<div class="container-top">
-
+			
 			<a href="#">
 				<img src="img/logo.png" class="logo">
 			</a>
-
+			
 			<nav class="mainHeader-nav">
 				<a href="#top" class="mainHeader-nav-link">Home</a>
 				<a href="#about" class="mainHeader-nav-link">Matricule-se</a>
@@ -31,7 +33,7 @@
 			</nav>
 		</div>
 	</header>
-
+	
 	<main>
 		<nav>
 			<div class="menu"><img src="img/add.svg"></div>
@@ -54,46 +56,46 @@
 				</a>
 			</div>
 		</nav>
-
+		
 		<section>
 			<div id="top" class="section_info">
 				<div class="row container">
 					<!-- <h2 class="header">YouCan Language Courses</h2> -->
 					<p id="slogan">Aprenda <span class="feature">Inglês</span> e cultura de maneira prazerosa. <br>
-					Agende já uma <span class="feature">aula</span> experimental sem compromisso e venha conhecer nosso <span class="feature">diferencial!</span> </p>
-				</div>
-			</div>
-			<div class="parallax-container">
-				<div class="parallax"><img src="img/london.jpeg"></div>
-				<p>Agende uma aula experimental sem compromisso e venha conhecer nosso diferencial</p>
-			</div>
-		</section>
-		<section>
-			<div id="about" class="section_info">
-				<div class="row container">
-					<h2 class="header">Seja um aluno</h2>
-					<div class="step-container">	
-						<div class="step-item">
-							<img src="img/icons/book.png" alt="">
-							<h3>1. Entre em Contato</h3>
-							<p>Preencha nosso formulário de contato, telefone ou e-mail. Estamos esperando por você.</p>
-						</div>
-						<div class="step-item">
-							<img src="img/icons/apple.png" alt="">
-							<h3>2. Aula experimental</h3>
-							<p>Agendaremos uma aula exeperimental, onde o aluno conhecerá nossos métodos e vantagens.</p>
-						</div>
-						<div class="step-item">
-							<img src="img/icons/globe.png" alt="">
-							<h3>3. Aproveite a aula</h3>
-							<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy your class!</p>
-						</div>
+						Agende já uma <span class="feature">aula</span> experimental sem compromisso e venha conhecer nosso <span class="feature">diferencial!</span> </p>
 					</div>
+				</div>
+				<div class="parallax-container">
+					<div class="parallax"><img src="img/london.jpeg"></div>
+					<p>Agende uma aula experimental sem compromisso e venha conhecer nosso diferencial</p>
+				</div>
+			</section>
+			<section>
+				<div id="about" class="section_info">
+					<div class="row container">
+						<h2 class="header">Seja um aluno</h2>
+						<div class="step-container">	
+							<div class="step-item">
+								<img src="img/icons/book.png" alt="">
+								<h3>1. Entre em Contato</h3>
+								<p>Preencha nosso formulário de contato, telefone ou e-mail. Estamos esperando por você.</p>
+							</div>
+							<div class="step-item">
+								<img src="img/icons/apple.png" alt="">
+								<h3>2. Aula experimental</h3>
+								<p>Agendaremos uma aula exeperimental, onde o aluno conhecerá nossos métodos e vantagens.</p>
+							</div>
+							<div class="step-item">
+								<img src="img/icons/globe.png" alt="">
+								<h3>3. Aproveite a aula</h3>
+								<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy your class!</p>
+							</div>
+						</div>
 						<a href="#about">
 							<button id="btn-contact">Seja um aluno</button>
 						</a>
+					</div>
 				</div>
-			</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/world.jpeg"></div>
 				</div>
@@ -103,52 +105,56 @@
 					<div class="row container" id="courses-p">
 						<h2 class="header">Benefícios</h2>
 					</div>
-					<div class="icon-container">
-						<div class="icon-item">
-							<img src="img/icons/book.png" alt="">
+					<div class="benefits-container">
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
+							<p>Abordagens e programas focados e eficazes – sem perda de tempo!</p>
 						</div>
-						<div class="icon-item">
-							<img src="img/icons/prize.png" alt="">
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_star_black_24px.svg">Cursos personalizados</h3>
+							<p>Cursos de inglês personalizados para adultos e adolescentes.</p>
 						</div>
-						<div class="icon-item">
-							<img src="img/icons/hat.png" alt="">
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_person_add_black_24px.svg">Grupos exclusivos</h3>
+							<p>Inglês para pequenos grupos (no máximo 3 alunos por horário).</p>
 						</div>
-					</div>
-					<div class="text-container">
-						<div class="text-item">
-							<p>Catálogo de livros atualizado anualmente e escolhido em sintonia com o perfil dos alunos.</p>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_import_contacts_black_24px.svg">Material didático importado</h3>
+							<p>Livros importados de editoras renomadas, e atualização constante do catálogo.</p>
 						</div>
-						<div class="text-item">
-							<p>Abordagem de ensino com foco em fluência e comunicação.</p>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
+							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa.</p>
 						</div>
-						<div class="text-item">
-							<p>Professora altamente capacitada, com profundo conhecimento prático na língua.</p>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_mode_comment_black_24px.svg">Aprenda de maneira prazerosa</h3>
+							<p>Foco em conversação e fluência. Ambiente profissional e amigável.</p>
 						</div>
 					</div>
 				</div>
-					<div class="parallax-container">
-						<div class="parallax"><img src="img/class.jpeg"></div>
-					</div>
+				<div class="parallax-container">
+					<div class="parallax"><img src="img/class.jpeg"></div>
+				</div>
 			</section>
-					<section>
-						<div id="contact" class="section_info">
-							<div class="row container">
-								<h2 class="header">Contact Us</h2>
-								<p class="paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.Leite de capivaris, leite de mula manquis sem cabeça. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Diuretics paradis num copo é motivis de denguis.Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.</p>
-							</div>
-						</div>
-						<div class="parallax-container">
-							<div class="parallax"><img src="img/contact.jpeg"></div>
-						</div>
-					</section>
-				</main>
-
-				<footer>
-					<p>YouCan Language Courses</p>
-				</footer>
-
-				<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-				<script src="js/parallax.js"></script>
-				<script src="js/script.js"></script>
-			</body>
-			</html>
+			<section>
+				<div id="contact" class="section_info">
+					<div class="row container">
+						<h2 class="header">Contact Us</h2>
+						<p class="paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.Leite de capivaris, leite de mula manquis sem cabeça. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Diuretics paradis num copo é motivis de denguis.Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.</p>
+					</div>
+				</div>
+				<div class="parallax-container">
+					<div class="parallax"><img src="img/contact.jpeg"></div>
+				</div>
+			</section>
+		</main>
+		
+		<footer>
+			<p>YouCan Language Courses</p>
+		</footer>
+		
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="js/parallax.js"></script>
+		<script src="js/script.js"></script>
+	</body>
+	</html>
