Added button on "Benefits"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- <link rel="stylesheet" href="css/reset.css"> -->
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+	rel="stylesheet">
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
@@ -131,30 +131,34 @@
 							<p>Foco em conversação e fluência. Ambiente profissional e amigável.</p>
 						</div>
 					</div>
+					<a href="#about">
+						<button id="btn-contact">Seja um aluno</button>
+					</a>
 				</div>
-				<div class="parallax-container">
-					<div class="parallax"><img src="img/class.jpeg"></div>
+			</div>
+			<div class="parallax-container">
+				<div class="parallax"><img src="img/class.jpeg"></div>
+			</div>
+		</section>
+		<section>
+			<div id="contact" class="section_info">
+				<div class="row container">
+					<h2 class="header">Contact Us</h2>
+					<p class="paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.Leite de capivaris, leite de mula manquis sem cabeça. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Diuretics paradis num copo é motivis de denguis.Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.</p>
 				</div>
-			</section>
-			<section>
-				<div id="contact" class="section_info">
-					<div class="row container">
-						<h2 class="header">Contact Us</h2>
-						<p class="paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.Leite de capivaris, leite de mula manquis sem cabeça. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Diuretics paradis num copo é motivis de denguis.Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.</p>
-					</div>
-				</div>
-				<div class="parallax-container">
-					<div class="parallax"><img src="img/contact.jpeg"></div>
-				</div>
-			</section>
-		</main>
-		
-		<footer>
-			<p>YouCan Language Courses</p>
-		</footer>
-		
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script src="js/parallax.js"></script>
-		<script src="js/script.js"></script>
-	</body>
-	</html>
+			</div>
+			<div class="parallax-container">
+				<div class="parallax"><img src="img/contact.jpeg"></div>
+			</div>
+		</section>
+	</main>
+	
+	<footer>
+		<p>YouCan Language Courses</p>
+	</footer>
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="js/parallax.js"></script>
+	<script src="js/script.js"></script>
+</body>
+</html>
