Fixed "Seja um aluno" button's href

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			</a>
 			
 			<nav class="mainHeader-nav">
-				<a href="#top" class="mainHeader-nav-link">Home</a>
-				<a href="#about" class="mainHeader-nav-link">Matricule-se</a>
-				<a href="#courses" class="mainHeader-nav-link">Cursos</a>
-				<a href="#contact" class="mainHeader-nav-link">Contato</a>
-				<a href="#about">
+				<a href="#top" class="mainHeader-nav-link tooltip">Home</a>
+				<a href="#about" class="mainHeader-nav-link tooltip">Matricule-se</a>
+				<a href="#courses" class="mainHeader-nav-link tooltip">Cursos</a>
+				<a href="#contact" class="mainHeader-nav-link tooltip">Contato</a>
+				<a href="#contact" class="tooltip">
 					<button id="btn-contact-nav">Comece já</button>
 				</a>
 			</nav>
@@ -91,7 +91,7 @@
 								<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy your class!</p>
 							</div>
 						</div>
-						<a href="#about">
+						<a href="#contact" class="tooltip">
 							<button id="btn-contact">Seja um aluno</button>
 						</a>
 					</div>
@@ -131,7 +131,7 @@
 							<p>Foco em conversação e fluência. Ambiente profissional e amigável.</p>
 						</div>
 					</div>
-					<a href="#about">
+					<a href="#contact" class="tooltip">
 						<button id="btn-contact">Seja um aluno</button>
 					</a>
 				</div>
@@ -143,8 +143,8 @@
 		<section>
 			<div id="contact" class="section_info">
 				<div class="row container">
-					<h2 class="header">Contact Us</h2>
-					<p class="paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Casamentiss faiz malandris se pirulitá. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.Leite de capivaris, leite de mula manquis sem cabeça. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Diuretics paradis num copo é motivis de denguis.Aenean sit amet nisi. Aenean aliquam molestie leo, vitae iaculis nisl. Paisis, filhis, espiritis santis.</p>
+					<h2 class="header">Entre em Contato</h2>
+					<p>Preencha nosso formulário de contato, ou se preferir, entre em contato pelo nosso telefone:</p>
 				</div>
 			</div>
 			<div class="parallax-container">
