Started Contact Section

--- a/index.html
+++ b/index.html
@@ -143,8 +143,14 @@
 		<section>
 			<div id="contact" class="section_info">
 				<div class="row container">
-					<h2 class="header">Entre em Contato</h2>
-					<p>Preencha nosso formulário de contato, ou se preferir, entre em contato pelo nosso telefone:</p>
+					<h2 class="header">Fale Conosco</h2>
+					<!-- <p>Preencha nosso formulário de contato, ou se preferir, entre em contato pelo nosso telefone:</p> -->
+				</div>
+				<div class="contact-container">
+					<div class="contact-item">
+						<p><img src="img/icons/ic_phone_black_24px.svg">Tel/WhatsApp: (16) 91234-1234</p>
+						<p><img src="img/icons/ic_email_black_24px.svg">Email: hello@youcan.com</p>
+					</div>
 				</div>
 			</div>
 			<div class="parallax-container">
