Ajusted and fixed some nesting SCSS

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	
 	<main>
 		<nav>
-			<div class="menu"><img src="img/add.svg"></div>
-			<div class="nav-itens">
+			<div class="btn-more"><img src="img/add.svg"></div>
+			<div class="btn-more-itens">
 				<a href="#top" class="tooltip" data-tooltip="Top">
 					<img src="img/school.svg">
 					<label class="text_tooltip"></label>
