changed "mainHeader-nav" to "header-nav"

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				<img src="img/logo.png" class="logo">
 			</a>
 			
-			<nav class="mainHeader-nav">
-				<a href="#top" class="mainHeader-nav-link tooltip">Home</a>
-				<a href="#about" class="mainHeader-nav-link tooltip">Matricule-se</a>
-				<a href="#courses" class="mainHeader-nav-link tooltip">Cursos</a>
-				<a href="#contact" class="mainHeader-nav-link tooltip">Contato</a>
+			<nav class="header-nav">
+				<a href="#top" class="header-nav-link tooltip">Home</a>
+				<a href="#about" class="header-nav-link tooltip">Matricule-se</a>
+				<a href="#courses" class="header-nav-link tooltip">Cursos</a>
+				<a href="#contact" class="header-nav-link tooltip">Contato</a>
 			</nav>
 			
 			<a href="#contact" class="tooltip">
