--- a/sobre.html
+++ b/sobre.html
@@ -19,11 +19,11 @@
 				<img src="img/logo.png" class="logo">
 			</a>
 
-			<nav class="mainHeader-nav">
-				<a href="#top" class="mainHeader-nav-link">Home</a>
-				<a href="#about" class="mainHeader-nav-link">Sobre nós</a>
-				<a href="#courses" class="mainHeader-nav-link">Cursos</a>
-				<a href="#contact" class="mainHeader-nav-link">Contato</a>
+			<nav class="header-nav">
+				<a href="#top" class="header-nav-link">Home</a>
+				<a href="#about" class="header-nav-link">Sobre nós</a>
+				<a href="#courses" class="header-nav-link">Cursos</a>
+				<a href="#contact" class="header-nav-link">Contato</a>
 			</nav>
 		</div>
 	</header>
