--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	</header>
 	
 	<main>
-		<nav>
+		<nav class="nav-mobile">
 			<div class="btn-more"><img src="img/add.svg"></div>
-			<div class="btn-more-itens">
+			<!-- <div class="btn-more-itens">
 				<a href="#top" class="tooltip" data-tooltip="Top">
 					<img src="img/school.svg">
 					<label class="text_tooltip"></label>
@@ -56,7 +56,7 @@
 					<img src="img/chat.svg">
 					<label class="text_tooltip"></label>
 				</a>
-			</div>
+			</div> -->
 		</nav>
 		
 		<section>
