fixed "step" sessions

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							</div>
 						</div>
 						<a href="#contact" class="tooltip">
-							<button id="btn-contact">Seja um aluno</button>
+							<button class="btn-contact">Seja um aluno</button>
 						</a>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 					<a href="#contact" class="tooltip">
-						<button id="btn-contact">Seja um aluno</button>
+						<button class="btn-contact">Seja um aluno</button>
 					</a>
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 								<label for="message">Mensagem</label>
 								<textarea name="message" id="message" placeholder="Escreva aqui sua mensagem!" required></textarea>
 							</div>
-							<input type="submit" value="Enviar" id="btn-contact">
+							<input type="submit" value="Enviar" class="btn-contact">
 						</form>
 						
 						<!-- <p><img src="img/icons/ic_phone_black_24px.svg">Tel/WhatsApp: (16) 91234-1234</p>
