--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
 	<main>
 		<nav class="nav-mobile">
 			<div class="btn-more"><img src="img/add.svg"></div>
-			<!-- <div class="btn-more-itens">
+			<div class="btn-more-itens">
 				<a href="#top" class="tooltip" data-tooltip="Top">
 					<img src="img/school.svg">
-					<label class="text_tooltip"></label>
+					<!-- <label class="text_tooltip"></label> -->
 				</a>
 				<a href="#about" class="tooltip" data-tooltip="About">
 					<img src="img/info.svg">
-					<label class="text_tooltip"></label>
+					<!-- <label class="text_tooltip"></label> -->
 				</a>
 				<a href="#courses" class="tooltip" data-tooltip="Schedule">
 					<img src="img/date.svg">
-					<label class="text_tooltip"></label>
+					<!-- <label class="text_tooltip"></label> -->
 				</a>
 				<a href="#contact" class="tooltip" data-tooltip="Contact">
 					<img src="img/chat.svg">
-					<label class="text_tooltip"></label>
+					<!-- <label class="text_tooltip"></label> -->
 				</a>
-			</div> -->
+			</div>
 		</nav>
 		
 		<section>
