--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="white" />
+	<meta name="theme-color" content="#3379BF" />
 
 	
 	<title>YouCan! | English Course</title>
