added phrases on parallax and contact

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#3379BF" />
-
+	
 	
 	<title>YouCan! | English Course</title>
 	<!-- <link rel="stylesheet" href="css/reset.css"> -->
@@ -102,6 +102,7 @@
 				</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/world.jpeg"></div>
+					<p>Tenha domínio do idioma inglês e tenha o mundo em suas mãos</p>
 				</div>
 			</section>
 			<section>
@@ -141,13 +142,14 @@
 				</div>
 			</div>
 			<div class="parallax-container">
-				<div class="parallax"><img src="img/class.jpeg"></div>
+				<div class="parallax"><img src="img/contact.jpeg"></div>
 			</div>
 		</section>
 		<section>
 			<div id="contact" class="section_info">
 				<div class="row container">
 					<h2 class="header">Fale Conosco</h2>
+					<p>Entre em contato pelo telefone <span class="feat-reverse">(16) 91234 5678</span>, ou se preferir preencha o formulário abaixo.</p>
 					<!-- <p>Preencha nosso formulário de contato, ou se preferir, entre em contato pelo nosso telefone:</p> -->
 				</div>
 				<div class="contact-container">
@@ -177,9 +179,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="parallax-container">
+				<!-- <div class="parallax-container">
 					<div class="parallax"><img src="img/contact.jpeg"></div>
-				</div>
+				</div> -->
 			</section>
 		</main>
 		
