fixed contact buttons and step icon

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<h2 class="header">Seja um aluno</h2>
 						<div class="step-container">	
 							<div class="step-item">
-								<img src="img/icons/book.png" alt="">
+								<img src="img/icons/phone.png" alt="">
 								<h3>1. Entre em Contato</h3>
 								<p>Preencha nosso formulário de contato, telefone ou e-mail. Estamos esperando por você.</p>
 							</div>
@@ -102,7 +102,7 @@
 				</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/world.jpeg"></div>
-					<p>Tenha domínio do idioma inglês e tenha o mundo em suas mãos</p>
+					<p>Domine o idioma inglês e tenha o mundo em suas mãos</p>
 				</div>
 			</section>
 			<section>
