Preparing for modal

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<div class="step-item">
 								<img src="img/icons/phone.png" alt="">
 								<h3>1. Entre em Contato</h3>
-								<p>Preencha nosso formulário de contato, telefone ou e-mail. Estamos esperando por você.</p>
+								<p>Preencha nosso formulário de contato, telefone ou nos envie um e-mail. Estamos esperando por você.</p>
 							</div>
 							<div class="step-item">
 								<img src="img/icons/apple.png" alt="">
@@ -112,6 +112,10 @@
 					</div>
 					<div class="benefits-container">
 						<div class="benefits-item">
+							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
+							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa. <span class="feature">Clique aqui e saiba mais</span></p>
+						</div>
+						<div class="benefits-item">
 							<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
 							<p>Abordagens e programas focados e eficazes – sem perda de tempo!</p>
 						</div>
@@ -126,10 +130,6 @@
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_import_contacts_black_24px.svg">Material didático importado</h3>
 							<p>Livros importados de editoras renomadas, e atualização constante do catálogo.</p>
-						</div>
-						<div class="benefits-item">
-							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
-							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa.</p>
 						</div>
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_mode_comment_black_24px.svg">Aprenda de maneira prazerosa</h3>
