added modal test

--- a/index.html
+++ b/index.html
@@ -113,9 +113,27 @@
 					<div class="benefits-container">
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
-							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa. <span class="feature">Clique aqui e saiba mais</span></p>
+							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa. <span id="open-modal" class="feature">Clique aqui e saiba mais</span></p>
 						</div>
-						<div class="benefits-item">
+						<!-- The Modal -->
+						<div id="myModal" class="modal">
+							
+							<!-- Modal content -->
+							<div class="modal-content">
+								<div class="modal-header">
+									<span class="close">&times;</span>
+									<h2>Modal Header</h2>
+								</div>
+								<div class="modal-body">
+									<p>Some text in the Modal Body</p>
+									<p>Some other text...</p>
+								</div>
+								<div class="modal-footer">
+									<h3>Modal Footer</h3>
+								</div>
+							</div>
+							
+						</div>						<div class="benefits-item">
 							<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
 							<p>Abordagens e programas focados e eficazes – sem perda de tempo!</p>
 						</div>
@@ -192,5 +210,6 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="js/parallax.js"></script>
 		<script src="js/script.js"></script>
+		<script src="js/modal.js"></script>
 	</body>
 	</html>
