changed section slogans

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/london.jpeg"></div>
-					<p>Agende uma aula experimental sem compromisso e venha conhecer nosso diferencial</p>
+					<p>Nossos programas são focados e eficazes - sem perda de tempo!</p>
 				</div>
 			</section>
 			<section>
@@ -122,7 +122,7 @@
 							<div class="modal-content">
 								<div class="modal-header">
 									<span class="close">&times;</span>
-									<h3>Modal Header</h3>
+									<h3>Professora Qualificada</h3>
 								</div>
 								<div class="modal-body">
 									<p>Some text in the Modal Body</p>
@@ -161,6 +161,7 @@
 			</div>
 			<div class="parallax-container">
 				<div class="parallax"><img src="img/contact.jpeg"></div>
+				<p>Entre em contato e conheça nosso método personalizado</p>
 			</div>
 		</section>
 		<section>
