fixed section_info parallax text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/london.jpeg"></div>
-					<p>Nossos programas são focados e eficazes - sem perda de tempo!</p>
+					<p>Programas focados e eficazes, com foco em conversação e fluência</p>
 				</div>
 			</section>
 			<section>
