--- a/index.html
+++ b/index.html
@@ -26,24 +26,29 @@
 			</a>
 			
 			<nav class="header-nav">
-				<button class="menu-fechar">Fecha Menu</button>
 				<a href="#top" class="header-nav-link tooltip">Home</a>
-				<a href="#about" class="header-nav-link tooltip">Matricule-se</a>
-				<a href="#courses" class="header-nav-link tooltip">Cursos</a>
+				<a href="#about" class="header-nav-link tooltip">Sobre Nós</a>
+				<a href="#courses" class="header-nav-link tooltip">Benefícios</a>
 				<a href="#contact" class="header-nav-link tooltip">Contato</a>
 			</nav>
 			
-			<a href="#contact" class="tooltip">
-				<button id="btn-contact-nav">Comece já</button>
-			</a>
-			
-			<!-- <button class="menu-abrir">Abre Menu</button> -->
 			<div class="button">
 				<b></b>
 				<b></b>
 				<b></b>
-			</div>
+			</div>					
 			
+			<!-- <a href="#contact" class="tooltip">
+				<button id="btn-contact-nav">Comece já</button>
+			</a> -->
+			
+						  
+		</div>
+		<div class="nav-mobile" id="nav-mobile">
+				<a href="#top" class="mobile-nav-link tooltip">Home</a>
+				<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
+				<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
+				<a href="#contact" class="mobile-nav-link tooltip">Contato</a>
 		</div>
 	</header>
 	
