fixed nav-mobile transition and added button in it

--- a/index.html
+++ b/index.html
@@ -32,23 +32,25 @@
 				<a href="#contact" class="header-nav-link tooltip">Contato</a>
 			</nav>
 			
+			
+			<a href="#contact" class="tooltip">
+				<button id="btn-contact-nav">Comece já</button>
+			</a>
+			
 			<div class="button">
 				<b></b>
 				<b></b>
 				<b></b>
 			</div>					
 			
-			<!-- <a href="#contact" class="tooltip">
-				<button id="btn-contact-nav">Comece já</button>
-			</a> -->
-			
-						  
 		</div>
 		<div class="nav-mobile" id="nav-mobile">
-				<a href="#top" class="mobile-nav-link tooltip">Home</a>
-				<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
-				<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
-				<a href="#contact" class="mobile-nav-link tooltip">Contato</a>
+			<a href="#top" class="mobile-nav-link tooltip">Home</a>
+			<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
+			<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
+			<a href="#contact" class="tooltip">
+				<button id="btn-mobile-nav">Comece já</button>
+			</a>
 		</div>
 	</header>
 	
