working on footer

--- a/index.html
+++ b/index.html
@@ -55,23 +55,6 @@
 	</header>
 	
 	<main>
-		<!-- <nav class="nav-mobile">
-			<div class="btn-more"><img src="img/add.svg"></div>
-			<div class="btn-more-itens">
-				<a href="#top" class="tooltip" data-tooltip="Top">
-					<img src="img/school.svg">
-				</a>
-				<a href="#about" class="tooltip" data-tooltip="About">
-					<img src="img/info.svg">
-				</a>
-				<a href="#courses" class="tooltip" data-tooltip="Schedule">
-					<img src="img/date.svg">
-				</a>
-				<a href="#contact" class="tooltip" data-tooltip="Contact">
-					<img src="img/chat.svg">
-				</a>
-			</div>
-		</nav> -->
 		
 		<section>
 			<div id="top" class="section_info">
@@ -128,27 +111,27 @@
 							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa. <span id="open-modal" class="feature">Clique aqui e saiba mais</span></p>
 						</div>
 						
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
+							<p>Abordagens e programas focados e eficazes – sem perda de tempo!</p>
+						</div>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_star_black_24px.svg">Cursos personalizados</h3>
+							<p>Cursos de inglês personalizados para adultos e adolescentes.</p>
+						</div>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_person_add_black_24px.svg">Grupos exclusivos</h3>
+							<p>Inglês para pequenos grupos (no máximo 3 alunos por horário).</p>
+						</div>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_import_contacts_black_24px.svg">Material didático importado</h3>
+							<p>Livros importados de editoras renomadas, e atualização constante do catálogo.</p>
+						</div>
+						<div class="benefits-item">
+							<h3><img src="img/icons/ic_mode_comment_black_24px.svg">Aprenda de maneira prazerosa</h3>
+							<p>Foco em conversação e fluência. Ambiente profissional e amigável.</p>
+						</div>
 					</div>						
-					<div class="benefits-item">
-						<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
-						<p>Abordagens e programas focados e eficazes – sem perda de tempo!</p>
-					</div>
-					<div class="benefits-item">
-						<h3><img src="img/icons/ic_star_black_24px.svg">Cursos personalizados</h3>
-						<p>Cursos de inglês personalizados para adultos e adolescentes.</p>
-					</div>
-					<div class="benefits-item">
-						<h3><img src="img/icons/ic_person_add_black_24px.svg">Grupos exclusivos</h3>
-						<p>Inglês para pequenos grupos (no máximo 3 alunos por horário).</p>
-					</div>
-					<div class="benefits-item">
-						<h3><img src="img/icons/ic_import_contacts_black_24px.svg">Material didático importado</h3>
-						<p>Livros importados de editoras renomadas, e atualização constante do catálogo.</p>
-					</div>
-					<div class="benefits-item">
-						<h3><img src="img/icons/ic_mode_comment_black_24px.svg">Aprenda de maneira prazerosa</h3>
-						<p>Foco em conversação e fluência. Ambiente profissional e amigável.</p>
-					</div>
 				</div>
 				<a href="#contact" class="tooltip">
 					<button class="btn-contact">Seja um aluno</button>
@@ -201,7 +184,13 @@
 	</main>
 	
 	<footer>
-		<p>YouCan Language Courses</p>
+		<section>
+			<p>Home</p>
+			<p>Sobre Nós</p>
+			<p>Benefícios</p>
+			<p>A Escola</p>
+			<p>Contato</p>
+		</section>	
 	</footer>
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
