designing footer - not done yet

--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
 			<p>A Escola</p>
 			<p>Contato</p>
 		</section>	
+		<section class="copy">
+			<p> &copy;
+				<script>
+					document.write(new Date().getFullYear());
+				</script>
+				MMelo Websites
+			</p>
+		</section>
 	</footer>
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
