--- a/index.html
+++ b/index.html
@@ -184,13 +184,22 @@
 	</main>
 	
 	<footer>
-		<section>
+		<section class="foot-links">
 			<p>Home</p>
 			<p>Sobre Nós</p>
 			<p>Benefícios</p>
 			<p>A Escola</p>
 			<p>Contato</p>
 		</section>	
+		<section class="foot-contact">
+			<p>Tel: (16) 91234 5678</p>
+			<p>Email: contact@youcan.com</p>
+		</section>
+		<section class="foot-social">
+			<a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+			<a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+			<a href="#"><img src="img/icons/whatsapp.svg" alt=""></a>
+		</section>
 		<section class="copy">
 			<p> &copy;
 				<script>
@@ -204,6 +213,5 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<script src="js/script.js"></script>
-	<script src="js/menu.js"></script>
 </body>
 </html>
