change to "Enjoy the class"

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<div class="step-item">
 								<img src="img/icons/globe.png" alt="">
 								<h3>3. Aproveite a aula</h3>
-								<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy your class!</p>
+								<p>Receba aulas personalizadas, com materiais atualizados e de alta qualidade. Enjoy the class!</p>
 							</div>
 						</div>
 						<a href="#contact" class="tooltip">
