fix .logo size in mobile and tablet devices

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<div class="benefits-container">
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
-							<p>Além de sua formação acadêmica, possui conhecimento prático na língua inglesa. <span id="open-modal" class="feature">Clique aqui e saiba mais</span></p>
+							<p>Além de formação acadêmica, possui conhecimento prático no idioma. <span id="open-modal" class="feature">Saiba mais</span></p>
 						</div>
 						
 						<div class="benefits-item">
