change the form id

--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
 			</div>
 			<div class="contact-container">
 				<div class="contact-item">
-					<form action="envia-contato.php" method="post" id="contact-form">
+					<form method="post" id="gform"
+					action="https://script.google.com/macros/s/AKfycbzh83P4Rog5kgtiaOuVSvzG0EXg2ictdzjOjdLwkFyk9-ntYk0/exec">
 						<div class="form-group">
-							<label for="nome">Nome</label>
+							<label for="name">Nome</label>
 							<input type="text" name="name" placeholder="Nome Completo" required>
 						</div>
 						<div class="form-group">
