--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@
 				<p>Entre em contato pelo telefone <span class="feat-reverse">(16) 91234 5678</span>, ou se preferir preencha o formulário abaixo.</p>
 			</div>
 			<div class="contact-container">
+				<div class="contact-infos">
+					<div class="contact-info">
+						<h3>Endereço</h3>
+						<p>Rua Marechal Deodoro, nº...</p>
+						<p>Centro, Franca - SP</p>
+					</div>
+					<div class="contact-info">
+						<h3>Telefone</h3>
+						<p>16 9999-9999</p>
+					</div>
+					<div class="contact-info">
+						<h3>Email</h3>
+						<p>contact@youcan.com</p>
+					</div>
+				</div>
 				<div class="contact-item">
 					<form method="post" id="gform" data-email="example@email.net"
 					action="https://script.google.com/macros/s/AKfycbzh83P4Rog5kgtiaOuVSvzG0EXg2ictdzjOjdLwkFyk9-ntYk0/exec">
@@ -183,9 +198,9 @@
 					</form>
 					<!-- <p><img src="img/icons/ic_phone_black_24px.svg">Tel/WhatsApp: (16) 91234-1234</p>
 						<p><img src="img/icons/ic_email_black_24px.svg">Email: hello@youcan.com</p> -->
-				</div>
-				<div style="display:none;" id="thankyou_message">
-					<p id="sent-message">Mensagem enviada com sucesso! <br>Em breve entraremos em contato!</p>
+					<div style="display:none;" id="thankyou_message">
+						<p id="sent-message">Mensagem enviada com sucesso! <br>Em breve entraremos em contato!</p>
+					</div>
 				</div>
 			</div>
 		</div>
