finish contact-form

--- a/index.html
+++ b/index.html
@@ -147,24 +147,9 @@
 		<div id="contact" class="section_info">
 			<div class="row container">
 				<h2 class="header">Fale Conosco</h2>
-				<p>Entre em contato pelo telefone <span class="feat-reverse">(16) 91234 5678</span>, ou se preferir preencha o formulário abaixo.</p>
+				<p class="contact-infos">Entre em contato pelo formulário ou <span class="feat-mail">contato@youcan.com</span></p>
 			</div>
 			<div class="contact-container">
-				<div class="contact-infos">
-					<div class="contact-info">
-						<h3>Endereço</h3>
-						<p>Rua Marechal Deodoro, nº...</p>
-						<p>Centro, Franca - SP</p>
-					</div>
-					<div class="contact-info">
-						<h3>Telefone</h3>
-						<p>16 9999-9999</p>
-					</div>
-					<div class="contact-info">
-						<h3>Email</h3>
-						<p>contact@youcan.com</p>
-					</div>
-				</div>
 				<div class="contact-item">
 					<form method="post" id="gform" data-email="example@email.net"
 					action="https://script.google.com/macros/s/AKfycbzh83P4Rog5kgtiaOuVSvzG0EXg2ictdzjOjdLwkFyk9-ntYk0/exec">
@@ -202,6 +187,8 @@
 							<p id="sent-message">Mensagem enviada com sucesso! <br>Em breve entraremos em contato!</p>
 						</div>
 					</div>
+					<br>
+					<p class="contact-infos">Se preferir, nosso telefone é: <span class="feat-reverse">(16) 9999-9999</span> (segunda à sexta, das 8h às 20h).</p>
 				</div>
 			</div>
 			<!-- <div class="parallax-container">
