fix btn-contact position

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						</fieldset>
 						
 						
-						<input type="submit" value="Enviar" class="btn-contact">
+						<input type="submit" value="Enviar" class="btn-form">
 					</form>
 					<!-- <p><img src="img/icons/ic_phone_black_24px.svg">Tel/WhatsApp: (16) 91234-1234</p>
 						<p><img src="img/icons/ic_email_black_24px.svg">Email: hello@youcan.com</p> -->
