footer: add logo and fix positions

--- a/index.html
+++ b/index.html
@@ -188,30 +188,38 @@
 	</main>
 	
 	<footer>
-		<section class="foot-links">
-			<p>Home</p>
-			<p>Sobre Nós</p>
-			<p>Benefícios</p>
-			<p>A Escola</p>
-			<p>Contato</p>
-		</section>	
-		<section class="foot-contact">
-			<p>Tel: (16) 91234 5678</p>
-			<p>Email: contact@youcan.com</p>
-		</section>
-		<section class="foot-social">
-			<a href="#"><img src="img/icons/facebook.svg" alt=""></a>
-			<a href="#"><img src="img/icons/instagram.svg" alt=""></a>
-			<a href="#"><img src="img/icons/whatsapp.svg" alt=""></a>
-		</section>
-		<section class="copy">
-			<p> &copy;
-				<script>
-					document.write(new Date().getFullYear());
-				</script>
-				MMelo Websites
-			</p>
-		</section>
+		<div id="logo-filter">
+			<img src="img/logo-gray-scale.png" class="logo">
+			<p>POWERED BY</p>				
+		</div>
+		<div>
+			<section class="foot-links">
+				<p>Home</p>
+				<p>Sobre Nós</p>
+				<p>Benefícios</p>
+				<p>A Escola</p>
+				<p>Contato</p>
+			</section>	
+		</div>
+		<div>
+			<section class="foot-contact">
+				<p>Tel: (16) 91234 5678</p>
+				<p>Email: contact@youcan.com</p>
+			</section>
+			<section class="foot-social">
+				<a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+				<a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+				<a href="#"><img src="img/icons/whatsapp.svg" alt=""></a>
+			</section>
+			<section class="copy">
+				<p> &copy;
+					<script>
+						document.write(new Date().getFullYear());
+					</script>
+					MMelo Websites
+				</p>
+			</section>
+		</div>
 	</footer>
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
