some tests to decide model/achievements page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 				<a href="#top" class="header-nav-link tooltip">Home</a>
 				<a href="#about" class="header-nav-link tooltip">Sobre Nós</a>
 				<a href="#courses" class="header-nav-link tooltip">Benefícios</a>
-				<span class="header-nav-link tooltip" id="open-modal-nav">Certificações</span>
+				<a href="./achievements.html" class="header-nav-link tooltip">Conquistas</a>
 				<a href="#contact" class="header-nav-link tooltip">Contato</a>
+				
+				<!-- <span class="header-nav-link tooltip" id="open-modal-nav">Certificações</span> -->
 			</nav>
 			
 			
@@ -118,15 +120,21 @@
 							<div class="modal-content">
 								<div class="modal-header">
 									<span class="close">&times;</span>
-									<h2>Modal Header</h2>
+									<h3>Professora Qualificada</h3>
 								</div>
 								<div class="modal-body">
-									<p>Some text in the Modal Body</p>
-									<p>Some other text...</p>
+									<h4>Cursos e Qualificações</h4>
+									<p><span class="certificado">Cambridge FCE Certificate</span> – Londres, Inglaterra, 2004</p>
+									<p><span class="certificado">Cambridge CAE Certificate</span> - Londres, Inglaterra, 2007</p>
+									<br/>
+									<h5>Cambridge TKT (Teaching Knowledge Test)</h5>
+									<p><span class="certificado">Module 1 (Language and Background to Language Learning and Teaching)</span> – Ribeirão Preto, 2016</p>
+									<p><span class="certificado">Module 2 (Lesson Planning and Use of Resources for Language Teaching)</span> – Riberão Preto, 2017</p>
+
 								</div>
-								<div class="modal-footer">
+								<!-- <div class="modal-footer">
 									<h3>Modal Footer</h3>
-								</div>
+								</div> -->
 							</div>
 							
 						</div>
