--- a/achievements.html
+++ b/achievements.html
@@ -26,7 +26,7 @@
 			</a>
 			
 			<nav class="header-nav">
-				<a href="#top" class="header-nav-link tooltip">Home</a>
+				<a href="./index.html" class="header-nav-link tooltip">Home</a>
 				<a href="#about" class="header-nav-link tooltip">Sobre Nós</a>
 				<a href="#courses" class="header-nav-link tooltip">Benefícios</a>
 				<a href="#contact" class="header-nav-link tooltip">Contato</a>
@@ -54,7 +54,7 @@
 		</div>
 	</header>
     <main>
-        
+        <div class="school"></div>
     </main>
 </body>
 </html>
