--- a/achievements.html
+++ b/achievements.html
@@ -54,7 +54,33 @@
 		</div>
 	</header>
     <main>
-        <div class="school"></div>
+		<div class="school"></div>
+								<!-- The Modal -->
+								<div id="myModal" class="modal">
+									
+									<!-- Modal content -->
+									<div class="modal-content">
+										<div class="modal-header">
+											<span class="close">&times;</span>
+											<h3>Professora Qualificada</h3>
+										</div>
+										<div class="modal-body">
+											<h4>Cursos e Qualificações</h4>
+											<p><span class="certificado">Cambridge FCE Certificate</span> – Londres, Inglaterra, 2004</p>
+											<p><span class="certificado">Cambridge CAE Certificate</span> - Londres, Inglaterra, 2007</p>
+											<br/>
+											<h5>Cambridge TKT (Teaching Knowledge Test)</h5>
+											<p><span class="certificado">Module 1 (Language and Background to Language Learning and Teaching)</span> – Ribeirão Preto, 2016</p>
+											<p><span class="certificado">Module 2 (Lesson Planning and Use of Resources for Language Teaching)</span> – Riberão Preto, 2017</p>
+		
+										</div>
+										<!-- <div class="modal-footer">
+											<h3>Modal Footer</h3>
+										</div> -->
+									</div>
+									
+								</div>
+		
     </main>
 </body>
 </html>
