--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			
 			<nav class="header-nav">
 				<a href="#top" class="header-nav-link tooltip">Home</a>
-				<a href="#about" class="header-nav-link tooltip">Sobre Nós</a>
+				<a href="./about.html" class="header-nav-link tooltip">Sobre Nós</a>
 				<a href="#courses" class="header-nav-link tooltip">Benefícios</a>
 				<a href="./achievements.html" class="header-nav-link tooltip">Conquistas</a>
 				<a href="#contact" class="header-nav-link tooltip">Contato</a>
@@ -51,6 +51,7 @@
 			<a href="#top" class="mobile-nav-link tooltip">Home</a>
 			<a href="#about" class="mobile-nav-link tooltip">Sobre Nós</a>
 			<a href="#courses" class="mobile-nav-link tooltip">Benefícios</a>
+			<a href="./achievements.html" class="mobile-nav-link tooltip">Conquistas</a>			
 			<a href="#contact" class="tooltip">
 				<button id="btn-mobile-nav">Comece já</button>
 			</a>
@@ -62,11 +63,10 @@
 		<section>
 			<div id="top" class="section_info">
 				<div class="row container">
-					<!-- <h2 class="header">YouCan Language Courses</h2> -->
 					<p id="slogan">Aprenda <span class="feature">Inglês</span> e cultura de maneira prazerosa. <br>
 						Agende já uma <span class="feature">aula</span> experimental sem compromisso e venha conhecer nosso <span class="feature">diferencial!</span> </p>
-					</div>
 				</div>
+		</div>
 				<div class="parallax-container">
 					<div class="parallax"><img src="img/london.jpeg"></div>
 					<p>Programas eficazes, com foco em conversação e fluência</p>
@@ -112,31 +112,6 @@
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_school_black_24px.svg">Professora qualificada</h3>
 							<p>Além de formação acadêmica, possui conhecimento prático no idioma. <span id="open-modal" class="feature">Saiba mais</span></p>
-						</div>
-						<!-- The Modal -->
-						<div id="myModal" class="modal">
-							
-							<!-- Modal content -->
-							<div class="modal-content">
-								<div class="modal-header">
-									<span class="close">&times;</span>
-									<h3>Professora Qualificada</h3>
-								</div>
-								<div class="modal-body">
-									<h4>Cursos e Qualificações</h4>
-									<p><span class="certificado">Cambridge FCE Certificate</span> – Londres, Inglaterra, 2004</p>
-									<p><span class="certificado">Cambridge CAE Certificate</span> - Londres, Inglaterra, 2007</p>
-									<br/>
-									<h5>Cambridge TKT (Teaching Knowledge Test)</h5>
-									<p><span class="certificado">Module 1 (Language and Background to Language Learning and Teaching)</span> – Ribeirão Preto, 2016</p>
-									<p><span class="certificado">Module 2 (Lesson Planning and Use of Resources for Language Teaching)</span> – Riberão Preto, 2017</p>
-
-								</div>
-								<!-- <div class="modal-footer">
-									<h3>Modal Footer</h3>
-								</div> -->
-							</div>
-							
 						</div>
 						<div class="benefits-item">
 							<h3><img src="img/icons/ic_schedule_black_24px.svg">Aproveite seu tempo</h3>
@@ -252,7 +227,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="js/parallax.js"></script>
 <script src="js/script.js"></script>
-<script src="js/modal.js"></script>
+<!-- <script src="js/modal.js"></script> -->
 <script data-cfasync="false" type="text/javascript" src="js/form-submission-handler.js"></script>
 
 </body>
